1.15-2.1.11:
- Fixed the lockup that happened when someone tried to open the shapecard gui from within the Builder gui. Also closing the shapecard gui will now reopen the Builder gui

1.15-2.1.10:
- Fixed the shield projector no longer accepting power

1.15-2.1.9:
- Fixed a bug where shapecard editing by right clicking the Builder no longer worked (it claimed the Builder was in another dimension)
- Updated to latest McJtyLib

1.15-2.1.8:
- Fixed a problem on servers

2.1.7:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

2.1.6:
- Fixed a potential exploit which could be used to attack a server

2.1.5-beta:
- Update for latest McJtyLib

2.1.4-beta:
- Update for latest McJtyLib

2.1.3-beta:
- Fixed the builder so it no longer voids items if there are no suitable storages

2.1.2-beta:
- The Builder can build in water again
- Fixed a problem with the energy level not showing in the shield projector GUI (it worked fine, it just didn't show)
- Fixed a potential crash with the shape card gui when it is openened from the Builder
- The shield will now also consider dolphins, bees, squids, and other neutral creatures as passive
- Some small protection fix
- Fixed a bug with the Builder where replacing a shape card would not trigger the recalculation of certain internal settings. This could cause settings like fortune or silk touch to be ignored
- Fixed a bug with the Builder where fortune wasn't working at all

2.1.1-beta:
- Dependency fix

2.1.0-beta:
- Fixed the Builder to cope better with 'unplacable' blocks. Everything is better compared to crashing.
- Better tooltips for items and blocks
- The 'oredict' support for voidable blocks in the shape card has been replaced with 'tag matching'
- The shapecard gui can open from within the gui of the Builder
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

2.0.2-alpha: